standard.css: avoid page breaks inside graphs for printouts

--- a/standard.css
+++ b/standard.css
@@ -16,6 +16,7 @@ table.gauge .subtitle th	{ font-weight: normal; }
 table.gauge .info td	{ color: #000; background-color: #9df; border-top: none; font-size: 0.9em; }
 table.gauge td		{ border-top: 1px dashed; padding: 1px 2px 2px 2px; }
 table.gauge 		{ border: 1px solid; margin: 1.5em auto; }
+table.graphxy		{ page-break-before: always; page-break-inside: avoid; }
 /* table.gauge tr:last-child td { border-bottom: none; } */
 .score, .url		{ font-size: 0.9em; font-family: "DejaVu Sans Mono", "Bitstream Vera Sans Mono", Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace; }
 table.topx .rank	{ color: #000; padding-left:.2em; padding-right: 1em; text-align: right; }
